--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Fiction'
 - !lcsh 'Love stories'
 - !lcc 'PS'
+- GITenberg
 title: Arms and the Woman
 url: http://www.gutenberg.org/ebooks/17359
